v0.0.1/modules/schema/pages/class/ISOUpperLayer.adoc
= `ISOUpperLayer`
:toclevels: 4


+++Is a set of configure addressing information that is required since ICCP utilizes addressing other than a TCP port.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ISOUpperLayer`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/CommunicationLink.adoc[`CommunicationLink`]
**** xref::class/IPAccessPoint.adoc[`IPAccessPoint`]
***** xref::class/TCPAccessPoint.adoc[`TCPAccessPoint`]
****** *`ISOUpperLayer`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ISOUpperLayer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PublicX509Certificate {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PublicX509Certificate {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteUnit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BilateralExchangeActor {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Control {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PSRType {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReportingGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperatingShare {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VerificationAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ClearanceDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



GenericAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PSREvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalTag {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




ISOUpperLayer -> PublicX509Certificate: UpperLayerPublicX509Certificate


ISOUpperLayer -> PublicX509Certificate: PublicX509Certificate


ISOUpperLayer -> RemoteUnit: RemoteUnits


ISOUpperLayer -> BilateralExchangeActor: BilateralExchangeActor


ISOUpperLayer -> Control: Controls


ISOUpperLayer -> Measurement: Measurements


ISOUpperLayer -> PSRType: PSRType


ISOUpperLayer -> ConfigurationEvent: ConfigurationEvent


ISOUpperLayer -> ReportingGroup: ReportingGroup


ISOUpperLayer -> OperatingShare: OperatingShare


ISOUpperLayer -> AssetInfo: AssetDatasheet


ISOUpperLayer -> VerificationAction: VerificationAction


ISOUpperLayer -> ClearanceDocument: Clearances


ISOUpperLayer -> GenericAction: GenericAction


ISOUpperLayer -> PSREvent: PSREvents


ISOUpperLayer -> Asset: Assets


ISOUpperLayer -> Location: Location


ISOUpperLayer -> OperationalTag: OperationalTags


ISOUpperLayer -> DiagramObject: DiagramObjects


ISOUpperLayer -> InstanceSet: InstanceSet


ISOUpperLayer -> Name: Names


ISOUpperLayer -> ChangeSetMember: PropertiesCIMDataObject


ISOUpperLayer -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<aeInvoke,`aeInvoke`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Is part of the Application Entity addressing as specified by ISO Addressing.+++

| <<aeQual,`aeQual`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Is the AE qualifier and represents further application level addressing information.+++

| <<apInvoke,`apInvoke`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Is a further application level OSI addressing parameter.+++

| <<apTitle,`apTitle`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Is a sequence of integer strings separated by ".".  The value, in conjunction with other application addressing attributes (e.g. other APs) are used to select a specific application (e.g. the ICCP application entity) per the OSI reference model.  The sequence, and its values, represent a namespace whose values are governed by ISO/IEC 7498-3.+++

| <<osiPsel,`osiPsel`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Is the addressing selector for OSI presentation addressing.+++

| <<osiSsel,`osiSsel`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Is the OSI session layer addressing information.+++

| <<osiTsel,`osiTsel`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Is the OSI Transport Layer addressing information.+++

| <<UpperLayerPublicX509Certificate,`UpperLayerPublicX509Certificate`>>
| 0..*
| xref::class/PublicX509Certificate.adoc[`PublicX509Certificate`]
| +++Certificate to be bound for use for Application layer mutual authentication.+++

| <<AssetDatasheet,`AssetDatasheet`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++

| <<BilateralExchangeActor,`BilateralExchangeActor`>>
| 0..1
| xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]
| +++ICCP data provider or consumer using communication addressing for a Bilateral table.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++

| <<PSRType,`PSRType`>>
| 0..1
| xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<address,`address`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Is the dotted decimal IP Address resolve the IP address. The format is controlled by the value of the addressType.+++

| <<addressType,`addressType`>>
| 0..1
| xref::enumeration/IPAddressKind.adoc[`IPAddressKind`]
| +++IP address type.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<gateway,`gateway`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Is the dotted decimal IPAddress of the first hop router.  Format is controlled by the addressType.+++

| <<keepAliveTime,`keepAliveTime`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Indicates the default interval at which TCP will check if the TCP connection is still valid.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<port,`port`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++This value is only needed to be specified for called nodes (e.g. those that respond to a TCP.Open request).

This value specifies the TCP port to be used. Well known and "registered" ports are preferred and can be found at:
 http://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml

For IEC 60870-6 TASE.2 (e.g. ICCP) and IEC 61850, the value used shall be 102 for non-TLS protected exchanges. The value shall be 3782 for TLS transported ICCP and 61850 exchanges.+++

| <<subnet,`subnet`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++This is the IP subnet mask which controls the local vs non-local routing.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

| <<Clearances,`Clearances`>>
| 0..*
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++

| <<ConfigurationEvent,`ConfigurationEvent`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++

| <<Controls,`Controls`>>
| 0..*
| xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<GenericAction,`GenericAction`>>
| 0..*
| xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperatingShare,`OperatingShare`>>
| 0..*
| xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++

| <<OperationalTags,`OperationalTags`>>
| 0..*
| xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++

| <<PSREvents,`PSREvents`>>
| 0..*
| xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++

| <<PublicX509Certificate,`PublicX509Certificate`>>
| 0..*
| xref::class/PublicX509Certificate.adoc[`PublicX509Certificate`]
| +++Is the Public Certificate used for mutual authentication between peers.+++

| <<RemoteUnits,`RemoteUnits`>>
| 0..*
| xref::class/RemoteUnit.adoc[`RemoteUnit`]
| +++RTUs may be attached to communication links.+++

| <<ReportingGroup,`ReportingGroup`>>
| 0..*
| xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<VerificationAction,`VerificationAction`>>
| 0..*
| xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
|===

'''


//[discrete]
[#address]
=== `address`
+++Is the dotted decimal IP Address resolve the IP address. The format is controlled by the value of the addressType.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IPAccessPoint.address`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IPAccessPoint.adoc[`IPAccessPoint`]


|===

//[discrete]
[#addressType]
=== `addressType`
+++IP address type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IPAccessPoint.addressType`
| Cardinality
| 0..1
| Type
| xref::enumeration/IPAddressKind.adoc[`IPAddressKind`]

| Inherited from
| xref::class/IPAccessPoint.adoc[`IPAccessPoint`]


|===

//[discrete]
[#aeInvoke]
=== `aeInvoke`
+++Is part of the Application Entity addressing as specified by ISO Addressing.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.aeInvoke`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#aeQual]
=== `aeQual`
+++Is the AE qualifier and represents further application level addressing information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.aeQual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#apInvoke]
=== `apInvoke`
+++Is a further application level OSI addressing parameter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.apInvoke`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#apTitle]
=== `apTitle`
+++Is a sequence of integer strings separated by ".".  The value, in conjunction with other application addressing attributes (e.g. other APs) are used to select a specific application (e.g. the ICCP application entity) per the OSI reference model.  The sequence, and its values, represent a namespace whose values are governed by ISO/IEC 7498-3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.apTitle`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#BilateralExchangeActor]
=== `BilateralExchangeActor`
+++ICCP data provider or consumer using communication addressing for a Bilateral table.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CommunicationLink.BilateralExchangeActor`
| Cardinality
| 0..1
| Type
| xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]

| Inherited from
| xref::class/CommunicationLink.adoc[`CommunicationLink`]


|===

//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#gateway]
=== `gateway`
+++Is the dotted decimal IPAddress of the first hop router.  Format is controlled by the addressType.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IPAccessPoint.gateway`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IPAccessPoint.adoc[`IPAccessPoint`]


|===

//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#keepAliveTime]
=== `keepAliveTime`
+++Indicates the default interval at which TCP will check if the TCP connection is still valid.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TCPAccessPoint.keepAliveTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TCPAccessPoint.adoc[`TCPAccessPoint`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#osiPsel]
=== `osiPsel`
+++Is the addressing selector for OSI presentation addressing.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.osiPsel`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#osiSsel]
=== `osiSsel`
+++Is the OSI session layer addressing information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.osiSsel`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#osiTsel]
=== `osiTsel`
+++Is the OSI Transport Layer addressing information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.osiTsel`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#port]
=== `port`
+++This value is only needed to be specified for called nodes (e.g. those that respond to a TCP.Open request).

This value specifies the TCP port to be used. Well known and "registered" ports are preferred and can be found at:
 http://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml

For IEC 60870-6 TASE.2 (e.g. ICCP) and IEC 61850, the value used shall be 102 for non-TLS protected exchanges. The value shall be 3782 for TLS transported ICCP and 61850 exchanges.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TCPAccessPoint.port`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TCPAccessPoint.adoc[`TCPAccessPoint`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PublicX509Certificate]
=== `PublicX509Certificate`
+++Is the Public Certificate used for mutual authentication between peers.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TCPAccessPoint.PublicX509Certificate`
| Cardinality
| 0..*
| Type
| xref::class/PublicX509Certificate.adoc[`PublicX509Certificate`]

| Inherited from
| xref::class/TCPAccessPoint.adoc[`TCPAccessPoint`]


|===

//[discrete]
[#RemoteUnits]
=== `RemoteUnits`
+++RTUs may be attached to communication links.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CommunicationLink.RemoteUnits`
| Cardinality
| 0..*
| Type
| xref::class/RemoteUnit.adoc[`RemoteUnit`]

| Inherited from
| xref::class/CommunicationLink.adoc[`CommunicationLink`]


|===

//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#subnet]
=== `subnet`
+++This is the IP subnet mask which controls the local vs non-local routing.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IPAccessPoint.subnet`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IPAccessPoint.adoc[`IPAccessPoint`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#UpperLayerPublicX509Certificate]
=== `UpperLayerPublicX509Certificate`
+++Certificate to be bound for use for Application layer mutual authentication.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ISOUpperLayer.UpperLayerPublicX509Certificate`
| Cardinality
| 0..*
| Type
| xref::class/PublicX509Certificate.adoc[`PublicX509Certificate`]


|===

//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===


